--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#14222D">
+    <meta name="description" content="Informations touristiques locales de France">
+    <meta name="keywords" content="France,Information,Map,Tourisme">
+    <meta name="author" content="Sébastien Barré">
 	<!-- index.html -->
 	<link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.47.0/mapbox-gl.css' rel='stylesheet' >
     <!--
